add more tests
Signed-off-by: Sebastian Hoß <sebhoss@pm.me>