@@ -153,6 +153,7 @@
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.exec=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.model=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.options=ALL-UNNAMED
+                        --add-opens wtf.metio.ilo/wtf.metio.ilo.version=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
